# spotify-downloader

./: .gitignore  LICENSE  README.md  functions.py  main.py  requirements.txt  setup.cfg  setup.py  spotify-downloader
spotify_downloader/: __init__.py  __main__.py
spotify_downloader/console/: __init__.py
spotify_downloader/download/: downloader.py  embed_meta.py
spotify_downloader/search/: song.py
