[metadata]
version = 2.0
name = spotify_downloader
url = https://github.com/Silent-Crafter/spotify-downloader
author = Silent-Crafter
license = MIT
description = Download spotify songs along with album art and metadata
long_description = file:README.md
long_description_content_type = text/markdown

[options]
include_package_data = true
install_requires =
    spotipy
    mutagen
    yt-dlp
    requests
python_requires = >=3.6.1
packages = find:

[options.entry_points]
console_scripts=
    spotify_downloader = spotify_downloader:console
